fix: the HAE routes were updated on swagger documentation
